# bird-player

./: .gitignore  AUDIO_BACKENDS.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rlease.yml  rust.yml
assets/icons/: icon.icns
src/: db.rs  main.rs  output.rs  resampler.rs
src/app/: app_impl.rs  i18n.rs  library.rs  mod.rs  player.rs  playlist.rs
src/app/components/: cassette_component.rs  footer.rs  language_selector.rs  library_component.rs  menu_bar.rs  mod.rs  player_component.rs  playlist_table.rs  playlist_tabs.rs  scope_component.rs  window_chrome.rs
src/app/style/: mod.rs
