[package]
name = "bird-player"
description = "A music player for local music files"
version = "0.1.0"
authors = ["RetricSu <inneverland2013@gmail.com>"]
edition = "2021"

[package.metadata.bundle]
name = "bird-player"
identifier = "bird.player.app"

[dependencies]
cpal = "0.15"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image"] }
id3 = "1.16.2"
itertools = "0.12"
lazy_static = "1.4.0"
rayon = "1.10"
rfd = "0.6"
serde = { version = "1", features=["derive"] }
serde_json = "1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
log = { version = "0.4", features = ["release_max_level_info"] }
walkdir = "2.5"
rubato = "0.12.0"
rand = "0.8.5"
symphonia = { version = "0.5.4", features = ["mp3"] }
arrayvec = "0.7.4"
rb = "0.4.1"
image = "0.24"
font-kit = "0.14.2"
libpulse-binding = "2.27.1"
libpulse-simple-binding = "2.27.1"

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
