[package]
name = "bird-player"
description = "A music player for local music files"
version = "0.1.0"
authors = ["RetricSu <inneverland2013@gmail.com>"]
edition = "2021"

[package.metadata.bundle]
name = "Bird Player"
identifier = "bird.player.app"
icon = ["assets/icons/icon.png"]
version = "0.1.0"
copyright = "© 2024 RetricSu"
category = "Music"
short_description = "A music player for local music files"
long_description = """
A modern music player built with egui and Rust, featuring a nostalgic 2000s-inspired interface.
Bird Player combines the charm of classic music players with modern technology,
providing a seamless experience for managing and playing your local music collection.
"""
osx_minimum_system_version = "10.14"
osx_frameworks = ["CoreServices", "CoreAudio", "AudioToolbox"]
windows_subsystem = "windows"
deb_depends = ["libasound2", "libpulse0", "libgtk-3-0"]

[dependencies]
cpal = "0.15"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders", "image"] }
id3 = "1.16.2"
itertools = "0.12"
lazy_static = "1.4.0"
rayon = "1.10"
rfd = "0.6"
serde = { version = "1", features=["derive"] }
serde_json = "1"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
log = { version = "0.4", features = ["release_max_level_info"] }
walkdir = "2.5"
rubato = "0.12.0"
rand = "0.8.5"
symphonia = { version = "0.5.4", features = ["mp3"] }
arrayvec = "0.7.4"
rb = "0.4.1"
image = "0.24"
font-kit = "0.14.2"
libpulse-binding = { version = "2.27.1", optional = true }
libpulse-simple-binding = { version = "2.27.1", optional = true }

[features]
default = []
pulseaudio = ["libpulse-binding", "libpulse-simple-binding"]

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.27.1"
libpulse-simple-binding = "2.27.1"

[dependencies.confy]
version = "0.6.1"
features = ["yaml_conf"]
default-features = false

[patch.crates-io]
confy = { git = 'https://github.com/rust-cli/confy' }
